[package]
name = "reflect-api-rs"
version = "0.0.1"
edition = "2021"
description = "Unofficial Rust scaffold and server implementation for the Reflect Stablecoin API"
readme = "README.md"
repository = "https://github.com/sawsimeon/reflect-api-rs"
homepage = "https://github.com/sawsimeon/reflect-api-rs"
license = "MIT"
keywords = ["reflect", "stablecoin", "api", "solana", "axum"]
categories = ["web-programming::http-server", "api-bindings"]

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1.41", features = ["full"] }
hyper = { version = "0.14", features = ["server"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tower-http = { version = "0.4", features = ["cors", "trace"] }

# For convenience in response types
http = "0.2"

[profile.dev]
opt-level = 0
