[package]
name = "reflect-api-rs"
version = "0.0.1"
edition = "2021"
description = "Unofficial Rust scaffold and server implementation for the Reflect Stablecoin API"
readme = "README.md"
repository = "https://github.com/sawsimeon/reflect-api-rs"
homepage = "https://github.com/sawsimeon/reflect-api-rs"
license = "MIT"
keywords = ["reflect", "stablecoin", "api", "solana", "axum"]
categories = ["web-programming::http-server", "api-bindings"]

[dependencies]
# Web framework
axum = { version = "0.7", features = ["json"] }

# Time handling
chrono = { version = "0.4", features = ["clock"] }

# Async runtime
tokio = { version = "1.41", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# Middleware
tower = "0.5"                # Needed for ServiceExt (oneshot) in tests
tower-http = { version = "0.5", features = ["cors", "trace"] }

# HTTP types
http = "0.2"

[profile.dev]
opt-level = 0
